--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".view.menu.MenuActivity"></activity>
+        <activity android:name=".view.profile.ProfileActivity"></activity>
     </application>
 
 </manifest>
