--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,10 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".view.menu.MenuActivity"></activity>
         <activity android:name=".view.profile.ProfileActivity"></activity>
+        <activity android:name=".view.quiz.QuizActivity"></activity>
+
     </application>
 
 </manifest>
