--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,5 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
 
-
-    implementation 'org.mongodb:mongo-java-driver:3.0.3'
+    implementation 'com.android.volley:volley:1.1.0'
 }
