--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         <activity android:name=".view.menu.MenuActivity"></activity>
         <activity android:name=".view.profile.ProfileActivity"></activity>
         <activity android:name=".view.quiz.QuizActivity"></activity>
+        <activity android:name=".view.notification.NotificationActivity"></activity>
+
+        <receiver android:name=".view.notification.AlarmNotificationReceiver"/>
 
 
 
