--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation "androidx.room:room-runtime:2.2.0-beta01"
 
+    implementation 'com.google.code.gson:gson:2.8.5'
+
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_extensions_version"
     kapt "androidx.room:room-compiler:$room_version"
 
