--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
         <activity android:name=".view.menu.MenuActivity"></activity>
         <activity android:name=".view.profile.ProfileActivity"></activity>
         <activity android:name=".view.quiz.QuizActivity"></activity>
+        <activity android:name=".view.clinicalHistory.ClinicalHistoryActivity"></activity>
+
         <activity android:name=".view.notification.NotificationActivity"></activity>
 
         <receiver android:name=".view.notification.AlarmNotificationReceiver"/>
